--- a/action.yml
+++ b/action.yml
@@ -30,7 +30,7 @@ runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
-    - ${{ inputs.image }}
-    - ${{ inputs.options }}
+#     - ${{ inputs.image }}
+#     - ${{ inputs.options }}
     - ${{ inputs.run }}
-    - ${{ inputs.shell }}
+#     - ${{ inputs.shell }}
